--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="#">О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Регистрация</a>
+          <a class="nav-link" href="{{ url_for('auth.register') }}">Регистрация</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Логин</a>
