--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <html lang="en">
 <head>
 <!-- 1. CSS Bootstrap -->
@@ -33,17 +34,58 @@
           <a class="nav-link" href="#">О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.register') }}">Регистрация</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Логин</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">Словарь</a>
         </li>
-        <li class="nav-item">
+        
+        {% if session.get("user_id") %}
+          <li class="nav-item">
           <a class="nav-link" href="#">Мини-тест</a>
-        </li>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link disabled">|</span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" 
+              style="background-color: #e9ecef; border-radius: 0.25rem;">
+              Аккаунт: {{ session.get("username") }}
+            </a>
+          </li>
+
+          <li class="nav-item">
+          <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#logoutModal">
+          Выйти
+          </a>
+          </li>
+          <!-- Logout Modal -->
+          <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="logoutModalLabel">Подтвердите действие</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                </div>
+                <div class="modal-body">
+                  Вы уверены, что хотите выйти из аккаунта?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                  <a href="{{ url_for('auth.logout') }}" class="btn btn-danger">Выйти</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        {% else %}
+          <li class="nav-item">
+            <span class="nav-link disabled">|</span>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.register') }}">Регистрация</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.login') }}">Логин</a>
+          </li>
+        {% endif %}
+
       </ul>
     </div>
   </div>
