--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,5 +3,34 @@
 {% block title %} Home page {% endblock %}
 
 {% block content %}
-<h1> This is the Home Page </h1>
+<div class="container mt-5">
+    {% if session.get("user_id") %}
+        <div class="alert alert-success">
+            Добро пожаловать, <strong>{{ session.get("username") }}</strong>! 🎉
+        </div>
+    {% else %}
+        <div class="alert alert-info">
+            Добро пожаловать, гость! Пожалуйста, 
+            <a href="{{ url_for('auth.login') }}">войдите</a> или 
+            <a href="{{ url_for('auth.register') }}">зарегистрируйтесь</a>.
+        </div>
+    {% endif %}
+
+    <div class="card shadow-sm p-4 mt-4">
+        <h4>Главная страница</h4>
+        <p class="text-muted">
+            Добро пожаловать на платформу изучения английских слов!
+            Этот сайт создан для тех, кто хочет расширить свой словарный запас и закрепить новые знания
+            в удобной форме.<br>
+            <strong>Что вас ждет:</strong><br>
+            <ul>
+                <li>Словарь английских слов, отсортированный по алфавиту.</li>
+                <li>Подробная карточка каждого слова: транскрипция, описание и иллюстрация для лучшего запоминания.</li>
+                <li>Возможность пройти тест из 10 случайных слов выбранного уровня, чтобы проверить и укрепить свои знания</li>
+            </ul>
+            Зарегистрируйтесь, выберите уровень и начните изучать английские слова уже сегодня 
+        </p>
+    </div>
+</div>
+
 {% endblock %}
