--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="#">О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Словарь</a>
+          <a class="nav-link" href="{{ url_for('dict_bp.dict_home') }}">Словарь</a>
         </li>
         
         {% if session.get("user_id") %}
