--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
         
         {% if session.get("user_id") %}
           <li class="nav-item">
-          <a class="nav-link" href="#">Мини-тест</a>
+          <a class="nav-link" href="{{ url_for('tests_bp.settings') }}">Мини-тест</a>
           </li>
           <li class="nav-item">
             <span class="nav-link disabled">|</span>
@@ -90,6 +90,20 @@
     </div>
   </div>
 </nav>
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <div class="container mt-3">
+      {% for category, message in messages %}
+        <div class="alert alert-{{ category if category else 'info' }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
+{% endwith %}
+
 
     {% block content %}{% endblock %}
 
