--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вход</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head> -->
 {% extends "base.html" %}
@@ -13,9 +13,9 @@
 {% block content %}
 <div class="bg-light d-flex align-items-center justify-content-center vh-100">
     <div class="card shadow p-4" style="min-width: 350px;">
-        <h3 class="text-center mb-3">Вход</h3>
+        <h3 class="text-center mb-3">Login</h3>
 
-    <!-- вывод flash сообщений -->
+    <!-- display flash messages -->
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <div class="alert alert-warning">
@@ -28,20 +28,20 @@
 
     <form method="post">
         <div class="mb-3">
-            <label for="username" class="form-label">Имя пользователя</label>
+            <label for="username" class="form-label">Username</label>
             <input type="text" name="username" id="username" class="form-control" required>
         </div>
 
         <div class="mb-3">
-            <label for="password" class="form-label">Пароль</label>
+            <label for="password" class="form-label">Password</label>
             <input type="password" name="password" id="password" class="form-control" required>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100">Войти</button>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
     </form>
 
     <div class="mt-3 text-center">
-        <small>Нет аккаунта? <a href="{{ url_for('auth.register') }}">Зарегистрируйтесь</a></small>
+        <small>Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></small>
     </div>
 </div>
 
